src/main/java/org/example/myproject/error/BussinessException.java
package org.example.myproject.error;

public class BussinessException {

    public Response
}
